# classifier

./: .gitignore  CMakeLists.txt  ComboBoxFieldRow.qml  FormRow.qml  README.md  TextFieldRow.qml  main.qml  qml.qrc
py-tf/: README.md  aav-segmentation-v1.ipynb  create_sample_images.py  genmetadata.py  metadata.json  test_create_sample_images.py
src/classifier/: filepath_button.cpp  filepath_button.hpp  main.cpp  main_view.cpp  main_view.hpp  window.cpp  window.hpp
style/: Button.qml  ComboBox.qml  RoundButton.qml  RoundComboBox.qml  RoundTextField.qml  Style.qml
